# json-parser-benchmark

./: .gitignore  README.md  go.mod  go.sum
goparser/: parser_benchmark_test.go  twitter.go  twitter_easyjson.go  twitter_easyjson_easyjson.go
rust/jsonparser/: Cargo.toml
rust/jsonparser/benches/: bench.rs
rust/jsonparser/src/: lib.rs  model.rs  serde_fn.rs  simd_json_fn.rs
testdata/: twitter.json  twitter.proto
