[package]
name = "jsonparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
jemallocator = "0.5.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"

[[bench]]
name = "bench"
harness = false
